Fix dropdown indicator size, allow left alignment of button label

--- a/src/components/Button.module.scss
+++ b/src/components/Button.module.scss
@@ -236,6 +236,16 @@
       }
     }
   }
+
+  &[data-label-alignment='left'] {
+    .inner {
+      flex-grow: 1;
+    }
+    .label {
+      flex-grow: 1;
+      text-align: left;
+    }
+  }
 }
 
 .inner {
