--- a/src/components/ImageIcon.module.scss
+++ b/src/components/ImageIcon.module.scss
@@ -47,6 +47,11 @@
     height: var(--icon-size-xl);
     padding: 8px;
   }
+  &[data-size='stretch'] {
+    width: 100%;
+    height: 100%;
+    padding: 8px;
+  }
 
   &[data-parent-clickable='true'] {
     a:focus-visible &,
